# speed-profile-builder

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: sample-ways.csv  urban-freight.yaml
src/speed_profile_builder/: __init__.py  __main__.py  cli.py  diff.py  errors.py  lint.py  model.py  render.py  simulate.py  stock.py  units.py
src/speed_profile_builder/data/: sample-ways.yaml
src/speed_profile_builder/emit/: __init__.py  common.py  osrm.py  valhalla.py
src/speed_profile_builder/profiles/: car.yaml  cargo-bike.yaml  ev-delivery.yaml  truck.yaml  van-urban.yaml
src/speed_profile_builder/spec/: __init__.py  loader.py  schema.py
tests/: __init__.py  conftest.py  test_cli.py  test_diff.py  test_emit.py  test_golden.py  test_inheritance.py  test_lint.py  test_model.py  test_simulate.py  test_spec_validation.py  test_units.py
tests/golden/: car.lua  car.valhalla.json  cargo-bike.lua  cargo-bike.valhalla.json  ev-delivery.lua  ev-delivery.valhalla.json  truck.lua  truck.valhalla.json  van-urban.lua  van-urban.valhalla.json
